--- a/ecg_app/requirements.txt
+++ b/ecg_app/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.44.1
-torch==2.4.1+cpu
-torchvision==0.19.1+cpu
+torch==2.4.1
+torchvision==0.19.1
 pillow==11.2.1
 numpy==2.1.2
 plotly==6.2.0
