--- a/ecg_app/requirements.txt
+++ b/ecg_app/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.35.0
-numpy==1.26.4
-pandas==2.2.0
-plotly==5.19.0
+streamlit~=1.35
+numpy~=1.26
+pandas~=2.2
+plotly~=5.19
 torch==2.1.2
 torchvision==0.16.2
 Pillow==10.2.0
