--- a/ecg_app/requirements.txt
+++ b/ecg_app/requirements.txt
@@ -2,6 +2,6 @@ streamlit~=1.35
 numpy~=1.26
 pandas~=2.2
 plotly~=5.19
-torch==2.1.2
-torchvision==0.16.2
+torch>=2.5.0,<2.7
+torchvision>=0.17.0,<0.18
 Pillow==10.2.0
