--- a/ecg_app/requirements.txt
+++ b/ecg_app/requirements.txt
@@ -1,9 +1,9 @@
-streamlit~=1.35
-numpy~=1.26
-pandas~=2.2
-plotly~=5.19
-torch==2.6.0
-torchvision==0.21.0
-Pillow==10.2.0
+streamlit
+numpy
+pandas
+plotly
+torch
+torchvision
+Pillow
 
 
